# deadman-switch-board

./: Dockerfile  README.md  pyproject.toml
deadman-switch-board/service/: deadman_switch_app.py
deadman-switch-board/service/apis/: deadman_switch_api.py
deadman-switch-board/service/models/: deadman_switch_model.py
deadman-switch-board/services/: api.py
