[tool.poetry]
name = "deadman-switch-board"
version = "0.1.0"
description = "A API and Web UI to manage deadman switch monitors"
authors = ["Zane Williamson <zane@ugh.cloud>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
responder = "v2.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
ipython = "^7.12.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
